--- a/release/spec/index.html
+++ b/release/spec/index.html
@@ -17,7 +17,7 @@
 <html>
 <head>
 <title>XAuth Specifications</title>
-<script type="text/javascript" src="http://xauth.org/xauth.js"></script>
+<script type="text/javascript" src="https://github.com/discant/xauth/raw/master/release/xauth.js"></script>
 <script type="text/javascript">
 var libraryURL = 'http://xauth.org/xauth.js'
 
